--- a/service.html
+++ b/service.html
@@ -226,10 +226,11 @@
             </p>
 
             <form action="https://formsubmit.co/justinbshajan324@gmail.com" method="POST">
-                <!-- Hidden fields -->
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_subject" value="New Service Booking from Star Magnet Website">
-                <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html">
+                    <!-- Hidden fields -->
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_subject" value="New Service Booking from Star Magnet Website">
+                    <input type="hidden" name="_next" value="https://starmagnettransform.com/">
+                    <input type="text" name="_honey" style="display:none">
 
                 <div class="row gx-3">
                     <!-- Full Name -->
@@ -323,30 +324,19 @@
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Quick Links</h3>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow  me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt end-white-arrow me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open end-white-arrow me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone end-white-arrow me-2"></i>+012 345 67890</p>
+               <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
+                 <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Follow Us</h3>
@@ -360,8 +350,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-<p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">StepUp Foundation</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
-    </div>
+ <p class="mb-0">&copy; 2025 Star Magnet. All Rights Reserved. Designed by <a href="https://htmlcodex.com" class="text-secondary">Stepx International</a></p>    </div>
     <!-- Footer End -->
 
 
