--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>Star Magnet – Guiding Youth to Greatness</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta name="keywords" content="Star Magnet, student empowerment, life coaching, character building, emotional intelligence, student mentoring, youth development, StepUp Foundation, personal growth for children">
+<meta name="description" content="Star Magnet by StepUp Foundation empowers students through life coaching, mentorship, and emotional intelligence training to build confidence, character, and purpose.">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
