--- a/service.html
+++ b/service.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <title>STAR MAGNET | Service</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-   <meta name="keywords" content="Star Magnet, student empowerment, life coaching, character building, emotional intelligence, student mentoring, youth development, StepUp Foundation, personal growth for children">
-<meta name="description" content="Star Magnet by StepUp Foundation empowers students through life coaching, mentorship, and emotional intelligence training to build confidence, character, and purpose.">
-
+    <meta content="Free HTML Templates" name="keywords">
+    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -226,12 +225,12 @@
                 Looking to nurture confidence, character, and emotional strength in children? You’re in the right place. <strong>Star Magnet</strong>, developed by StepUp Foundation, offers a unique blend of life coaching, experiential learning, and mentorship designed to empower young minds.
             </p>
 
-            <form action="https://formsubmit.co/justinbshajan324@gmail.com" method="POST">
-                    <!-- Hidden fields -->
-                    <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_subject" value="New Service Booking from Star Magnet Website">
-                    <input type="hidden" name="_next" value="https://starmagnettransform.com/">
-                    <input type="text" name="_honey" style="display:none">
+            <!-- ✅ FORM USING FORMSPREE -->
+            <form action="https://formspree.io/f/mjkrqwre" method="POST">
+                <!-- Hidden Fields -->
+                <input type="hidden" name="_subject" value="New Service Booking from Star Magnet Website">
+                <input type="hidden" name="_next" value="https://starmagnettransform.com/thank-you.html">
+                <input type="text" name="_honey" style="display:none">
 
                 <div class="row gx-3">
                     <!-- Full Name -->
@@ -251,13 +250,12 @@
                     </div>
 
                     <!-- Phone -->
-                   <div class="col-6">
-                    <div class="form-floating mb-3">
-                        <input type="tel" class="form-control" id="phone" name="Phone" placeholder="9876543210" required>
-                        <label for="phone">Phone Number</label>
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="tel" class="form-control" id="phone" name="Phone" placeholder="9876543210" required>
+                            <label for="phone">Phone Number</label>
+                        </div>
                     </div>
-                    </div>
-
 
                     <!-- Preferred Date -->
                     <div class="col-6">
@@ -292,7 +290,7 @@
                         </div>
                     </div>
 
-                    <!-- Submit -->
+                    <!-- Submit Button -->
                     <div class="col-12">
                         <button class="btn w-100 py-3 text-white border-0" style="background: linear-gradient(90deg, #28a745, #6de28b); color: #000; font-weight: 600;" type="submit">
                             Book a Service
@@ -304,6 +302,7 @@
 
     </div>
 </div>
+
 
     <!-- Quote End -->
     
