--- a/contact.html
+++ b/contact.html
@@ -81,89 +81,92 @@
         </div>
     </div>
 
-    <!-- Contact Section -->
-    <div class="container-fluid bg-secondary px-0">
-        <div class="row g-0">
-            <!-- Left Column: Contact Form -->
-            <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Reach Us Through</h1>
-                <p class="mb-4">
-                    Got questions or feedback? Reach out to <strong>Star Magnet</strong>—we’re here to support and guide you.
-                </p>
+<!-- Contact Section -->
+<div class="container-fluid bg-secondary px-0">
+    <div class="row g-0">
 
-                <form action="https://formsubmit.co/justinbshajan324@gmail.com" method="POST">
-                    <!-- Hidden fields -->
-                    <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_subject" value="New Contact Message from Star Magnet Website">
-                    <input type="hidden" name="_next" value="https://starmagnettransform.com/">
-                    <input type="text" name="_honey" style="display:none">
+        <!-- Left Column: Contact Form -->
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Reach Us Through</h1>
+            <p class="mb-4">
+                Got questions or feedback? Reach out to <strong>Star Magnet</strong>—we’re here to support and guide you.
+            </p>
 
-                    <div class="row gx-3">
-                        <!-- Full Name -->
-                        <div class="col-6">
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="contact-name" name="Name" placeholder="John Doe" required>
-                                <label for="contact-name">Full Name</label>
-                            </div>
-                        </div>
+            <form action="https://formspree.io/f/mjkrqwre" method="POST">
+                <!-- Hidden fields -->
+                <input type="hidden" name="_subject" value="New Contact Message from Star Magnet Website">
+                <input type="hidden" name="_next" value="https://starmagnettransform.com/thank-you.html">
+                <input type="text" name="_honey" style="display:none">
 
-                        <!-- Email -->
-                        <div class="col-6">
-                            <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="contact-email" name="Email" placeholder="name@example.com" required>
-                                <label for="contact-email">Email Address</label>
-                            </div>
-                        </div>
-
-                        <!-- Subject -->
-                        <div class="col-12">
-                            <div class="form-floating mb-3">
-                                <input type="text" class="form-control" id="contact-subject" name="Subject" placeholder="Subject" required>
-                                <label for="contact-subject">Subject</label>
-                            </div>
-                        </div>
-
-                        <!-- Message -->
-                        <div class="col-12 mb-3">
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Your message" id="contact-message" name="Message" style="height: 120px" required></textarea>
-                                <label for="contact-message">Your Message</label>
-                            </div>
-                        </div>
-
-                        <!-- Submit Button -->
-                        <div class="col-12">
-                            <button class="btn w-100 py-3 text-white border-0 rounded" style="background: linear-gradient(90deg, #28a745, #6de28b); color: #000; font-weight: 600;" type="submit">
-                                Send Message
-                            </button>
-                        </div>
-                        <div class="col-12 mt-3 text-center">
-                            <p class="mb-3">Or reach us instantly on:</p>
-
-                            <div class="d-grid gap-2 d-md-flex justify-content-center">
-                                <a href="https://wa.me/919037762644" target="_blank" class="btn btn-success mb-2 mb-md-0 me-md-2">
-                                    <i class="fab fa-whatsapp me-1"></i> WhatsApp Enquiry
-                                </a>
-                                <a href="https://www.facebook.com/StepUpTony/?rdid=DnscsibP2vviSS0p" target="_blank" class="btn btn-primary">
-                                    <i class="fab fa-facebook-f me-1"></i> Facebook Message
-                                </a>
-                            </div>
+                <div class="row gx-3">
+                    <!-- Full Name -->
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="contact-name" name="Name" placeholder="John Doe" required>
+                            <label for="contact-name">Full Name</label>
                         </div>
                     </div>
-                </form>
-            </div>
 
-            <!-- Right Column: Google Map -->
-            <div class="col-lg-6" style="min-height: 400px;">
-                <div class="position-relative h-100">
-                    <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.0648271743665!2d76.30596447513327!3d9.961817790149446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080d4167e31b6f%3A0xc460e5b42b6a3b87!2sKadavanthra%2C%20Kochi%2C%20Kerala%20682020%2C%20India!5e0!3m2!1sen!2sin!4v1603794290143!5m2!1sen!2sin"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-                    </iframe>
+                    <!-- Email -->
+                    <div class="col-6">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="contact-email" name="Email" placeholder="name@example.com" required>
+                            <label for="contact-email">Email Address</label>
+                        </div>
+                    </div>
+
+                    <!-- Subject -->
+                    <div class="col-12">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="contact-subject" name="Subject" placeholder="Subject" required>
+                            <label for="contact-subject">Subject</label>
+                        </div>
+                    </div>
+
+                    <!-- Message -->
+                    <div class="col-12 mb-3">
+                        <div class="form-floating">
+                            <textarea class="form-control" placeholder="Your message" id="contact-message" name="Message" style="height: 120px" required></textarea>
+                            <label for="contact-message">Your Message</label>
+                        </div>
+                    </div>
+
+                    <!-- Submit Button -->
+                    <div class="col-12">
+                        <button class="btn w-100 py-3 text-white border-0 rounded" style="background: linear-gradient(90deg, #28a745, #6de28b); color: #000; font-weight: 600;" type="submit">
+                            Send Message
+                        </button>
+                    </div>
+
+                    <!-- Alternate Contact Options -->
+                    <div class="col-12 mt-3 text-center">
+                        <p class="mb-3">Or reach us instantly on:</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-center">
+                            <a href="https://wa.me/919037762644" target="_blank" class="btn btn-success mb-2 mb-md-0 me-md-2">
+                                <i class="fab fa-whatsapp me-1"></i> WhatsApp Enquiry
+                            </a>
+                            <a href="https://www.facebook.com/StepUpTony/?rdid=DnscsibP2vviSS0p" target="_blank" class="btn btn-primary">
+                                <i class="fab fa-facebook-f me-1"></i> Facebook Message
+                            </a>
+                        </div>
+                    </div>
                 </div>
+            </form>
+        </div>
+
+        <!-- Right Column: Google Map -->
+        <div class="col-lg-6" style="min-height: 400px;">
+            <div class="position-relative h-100">
+                <iframe class="position-relative w-100 h-100"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.0648271743665!2d76.30596447513327!3d9.961817790149446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080d4167e31b6f%3A0xc460e5b42b6a3b87!2sKadavanthra%2C%20Kochi%2C%20Kerala%20682020%2C%20India!5e0!3m2!1sen!2sin!4v1603794290143!5m2!1sen!2sin"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
             </div>
         </div>
+
     </div>
+</div>
+
     <!-- Contact End -->
 
     <!-- Footer -->
