--- a/about.html
+++ b/about.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <title>STAR MAGNET | About</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Star Magnet, student empowerment, life coaching, character building, emotional intelligence, student mentoring, youth development, StepUp Foundation, personal growth for children">
-<meta name="description" content="Star Magnet by StepUp Foundation empowers students through life coaching, mentorship, and emotional intelligence training to build confidence, character, and purpose.">
-
+    <meta content="Free HTML Templates" name="keywords">
+    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -74,17 +73,7 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link active">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
-                <!-- <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="detail.html" class="dropdown-item">Blog Detail</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Quote Form</a>
-                        <a href="team.html" class="dropdown-item">The Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    </div>
-                </div> -->
+            
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -204,7 +193,6 @@
                                     </div>
                                 </div>
 
-
                 </div>
             </div>
         </div>
@@ -235,48 +223,36 @@
 <!-- Team End -->
 
 <!-- Footer Start -->
-<div class="container-fluid bg-primary text-secondary pt-3 pb-5 px-5">
-  <div class="row g-5">
-    <div class="col-12 text-center">
-      <h1 class="display-5 mb-4">Stay Update!!!</h1>
-      <form class="mx-auto" style="max-width: 600px;">
-        <div class="input-group">
-          <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-          <button class="btn btn-dark px-4">Sign Up</button>
+ <!-- Footer Start -->
+     <div class="container-fluid bg-primary text-secondary p-5">
+        <div class="row g-5">
+            <div class="col-12 text-center">
+                <h1 class="display-5 mb-4">Stay Update!!!</h1>
+                <form class="mx-auto" style="max-width: 600px;">
+                    <div class="input-group">
+                        <input type="text" class="form-control border-white p-3" placeholder="Your Email">
+                        <button class="btn btn-dark px-4">Sign Up</button>
+                    </div>
+                </form>
+            </div>
         </div>
-      </form>
     </div>
-  </div>
-</div>
-<!-- Footer End -->
-
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Quick Links</h3>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
-                </div>
-            </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow  me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt end-white-arrow me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open end-white-arrow me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone end-white-arrow me-2"></i>+012 345 67890</p>
+               <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
+                 <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Follow Us</h3>
@@ -290,14 +266,12 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-<p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">StepUp Foundation</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
-    </div>
+ <p class="mb-0">&copy; 2025 Star Magnet. All Rights Reserved. Designed by <a href="https://htmlcodex.com" class="text-secondary">Stepx International</a></p>    </div>
     <!-- Footer End -->
 
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
-
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
