--- a/index.html
+++ b/index.html
@@ -486,7 +486,12 @@
       <!-- Image Section -->
       <div class="col-lg-4 mb-4">
         <div class="text-center">
-          <img src="img/jeena.jpeg" alt="Jeena Johnson" class="img-fluid rounded-circle border border-3 border-primary" style="width: 250px; height: 250px; object-fit: cover;">
+          <div class="gradient-border p-1 rounded-circle mx-auto" style="width: 260px; height: 260px;">
+  <img src="img/jeena.jpeg" alt="Jeena Johnson"
+       class="img-fluid rounded-circle"
+       style="width: 100%; height: 100%; object-fit: cover; background-color: white;">
+</div>
+
           <h4 class="mt-3 gradient-text">Jeena Johnson</h4>
           <p class="text-muted">Registered Nurse & Head of Children Life Transformation</p>
         </div>
