--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
         <img class="img-fluid w-100" src="img/team-2.jpeg" alt="">
         <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
           <h3 class="text-white">Jeena Tony</h3>
-          <p class="text-white text-uppercase mb-0">Program Manager</p>
+          <p class="text-white text-uppercase mb-0">Head of Children Life Transformation</p>
         </div>
       </div>
     </div>
