--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <title>Star Magnet – Guiding Youth to Greatness</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="keywords" content="Star Magnet, student empowerment, life coaching, character building, emotional intelligence, student mentoring, youth development, StepUp Foundation, personal growth for children">
-<meta name="description" content="Star Magnet by StepUp Foundation empowers students through life coaching, mentorship, and emotional intelligence training to build confidence, character, and purpose.">
-
+    <meta content="Free HTML Templates" name="keywords">
+    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -487,13 +486,14 @@
       <div class="col-lg-4 mb-4">
         <div class="text-center">
           <div class="gradient-border p-1 rounded-circle mx-auto" style="width: 260px; height: 260px;">
-  <img src="img/jeena.jpeg" alt="Jeena Johnson"
-       class="img-fluid rounded-circle"
-       style="width: 100%; height: 100%; object-fit: cover; background-color: white;">
-</div>
-
+            <img src="img/jeeku.jpg" alt="Jeena Johnson"
+                 class="img-fluid rounded-circle"
+                 style="width: 100%; height: 100%; object-fit: cover; background-color: white;">
+          </div>
           <h4 class="mt-3 gradient-text">Jeena Johnson</h4>
-          <p class="text-muted">Registered Nurse & Head of Children Life Transformation</p>
+          <p class="mb-0 fw-bold text-dark">Chief Mentor</p>
+        <p class="text-muted">Student Transformation Programme</p>
+
         </div>
       </div>
 
@@ -516,22 +516,22 @@
 
         <h4 class="mt-4">Summary:</h4>
         <p>
-          Jeena Johnson is a compassionate and dedicated healthcare professional with multidisciplinary training in psychology, behavioral therapy, and child development. With a strong foundation in nursing and mental health, she serves in a leadership capacity to support and transform the lives of children through education, therapy, and care.
+          Jeena Johnson is a compassionate and dedicated healthcare professional and <strong class="text-dark"> Life Transformation Coach</strong> with multidisciplinary training in psychology, behavioral therapy, and child development. With a strong foundation in nursing and mental health, she serves in a leadership capacity to support and transform the lives of children through education, therapy, and care.
         </p>
 
-       <h2 class=" mt-5 mb-3">
-  <img src="img/Dart hitting center of target 3D icon.png" alt="icon" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 8px;">
-  Vision
-</h2>
+        <h2 class="mt-5 mb-3">
+          <img src="img/Dart hitting center of target 3D icon.png" alt="icon" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 8px;">
+          Vision
+        </h2>
 
         <blockquote class="blockquote">
           <p class="mb-0">"To ignite the potential of 1 million students across the world by nurturing life skills, self-confidence, and purpose-driven thinking—empowering a generation to rise as emotionally strong, socially responsible, and future-ready leaders of tomorrow."</p>
         </blockquote>
 
-         <h2 class=" mt-5 mb-3">
-  <img src="img/logo3.png" alt="icon" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 8px;">
-  Mission
-</h2>
+        <h2 class="mt-5 mb-3">
+          <img src="img/logo3.png" alt="icon" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 8px;">
+          Mission
+        </h2>
         <ul>
           <li>To provide daily 30-minute transformational classes that focus on personal growth, emotional intelligence, academic mindset, and value-based life skills.</li>
           <li>To support students from Class 5 to 12 through age-appropriate, interactive, and practical learning experiences in Malayalam and English.</li>
