--- a/service.html
+++ b/service.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>STAR MAGNET | Service</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta name="keywords" content="Student Empowerment, Life Transformation, Personal Development, Emotional Intelligence, Study Skills, Kerala Education Programs, Student Life Coach, Children Motivation, Star Magnet Program">
+<meta name="description" content="Star Magnet is a life transformation program empowering students with daily motivation, emotional intelligence, study skills, and personal growth sessions in Malayalam and English.">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
