--- a/index.html
+++ b/index.html
@@ -137,30 +137,43 @@
 
     <!-- About Start -->
     <div class="container-fluid bg-secondary p-0">
-        <div class="row g-0">
-            <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome To <span class="m-0 text-uppercase gradient-text">STAR MAGNET</span></h1>
-                <h4 class="text-primary mb-4">What if your child’s greatest strength isn’t just talent — but character?
-                     Is your child ready to face life with courage, empathy, and confidence?
-                     Are your kids growing up smart... but not always strong in values?<br>No worries — Star Magnet is here to guide the way--</h4>
-                <p class="mb-4">Star Magnet is a transformative life coaching program crafted specifically for
-                    children, with a strong focus on character development. Designed and
-                    conducted by the passionate and experienced team at Step Up Foundation, the
-                    program aims to nurture the inner strengths of young minds and empower
-                    them to become confident, responsible, and compassionate individuals.
-                    At the heart of Star Magnet lies a holistic approach to personal growth. The
-                    program integrates engaging activities, practical life lessons, and guided
-                    reflections to help children cultivate core values such as honesty, empathy,
-                    resilience, respect, and self-discipline. Recognizing that character shapes
-                    destiny, the curriculum is built to inspire lasting change from within.
-                    The Step Up Foundation’s team—comprising skilled educators, child
-                    psychologists, and certified life coaches—brings years of experience and deep
-                    commitment to every session. Their hands-on and empathetic approach
-                    ensures each child is seen, heard, and supported throughout the journey.
-                    Through interactive workshops, real-life role play, goal-setting exercises, and
-                    consistent mentorship</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
-            </div>
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Welcome To <span class="m-0 text-uppercase gradient-text">STAR MAGNET</span></h1>
+            <h4 class="text-primary mb-4">
+                What if your child’s greatest strength isn’t just talent — but character?
+                Is your child ready to face life with courage, empathy, and confidence?
+                Are your kids growing up smart... but not always strong in values?<br>
+                No worries — Star Magnet is here to guide the way.
+            </h4>
+
+            <p class="mb-4">
+                <strong>Star Magnet</strong> is a transformative life coaching program crafted specifically for children, with a strong focus on character development.
+            </p>
+
+            <p class="mb-4">
+                Designed and conducted by the passionate and experienced team at <strong>Step Up Foundation</strong>, the program aims to nurture the inner strengths of young minds and empower them to become confident, responsible, and compassionate individuals.
+            </p>
+
+            <p class="mb-4">
+                At the heart of Star Magnet lies a holistic approach to personal growth. The program integrates engaging activities, practical life lessons, and guided reflections to help children cultivate core values such as honesty, empathy, resilience, respect, and self-discipline.
+            </p>
+
+            <p class="mb-4">
+                Recognizing that character shapes destiny, the curriculum is built to inspire lasting change from within.
+            </p>
+
+            <p class="mb-4">
+                The Step Up Foundation’s team — comprising skilled educators, child psychologists, and certified life coaches — brings years of experience and deep commitment to every session. Their hands-on and empathetic approach ensures each child is seen, heard, and supported throughout the journey.
+            </p>
+
+            <p class="mb-4">
+                Through interactive workshops, real-life role play, goal-setting exercises, and consistent mentorship, children embark on a path of true personal transformation.
+            </p>
+
+            <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
+        </div>
+
             <div class="col-lg-6">
   <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5 text-white">
 
@@ -590,18 +603,25 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
-                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
-                 <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+918129543197" class="end-white-arrow">+91 812 954 3197</a></p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+919074717219" class="end-white-arrow">+91 907 471 7219</a></p>
+
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Follow Us</h3>
-                <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram fw-normal"></i></a>
-                </div>
-            </div>
+           <div class="col-lg-3 col-md-6">
+    <h3 class="end-white-text mb-4">Follow Us</h3>
+    <div class="d-flex">
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.instagram.com/starmagnetofficial?igsh=MWw4NG9zZ2dvenZ0dQ%3D%3D" target="_blank">
+            <i class="fab fa-instagram fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.facebook.com/StarMagnetOfficial?rdid=9iM4TjM2xFfksJee&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BgV7Zy5fY%2F" target="_blank">
+            <i class="fab fa-facebook-f fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="https://wa.me/918129543197" target="_blank">
+            <i class="fab fa-whatsapp fw-normal"></i>
+        </a>
+    </div>
+</div>
+
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
