--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="Student Empowerment, Life Transformation, Personal Development, Emotional Intelligence, Study Skills, Kerala Education Programs, Student Life Coach, Children Motivation, Star Magnet Program">
 <meta name="description" content="Star Magnet is a life transformation program empowering students with daily motivation, emotional intelligence, study skills, and personal growth sessions in Malayalam and English.">
 
-
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -97,31 +96,46 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid bg-secondary p-0">
-        <div class="row g-0">
-            <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome To <span class="m-0 text-uppercase gradient-text">STAR MAGNET</span></h1>
-                <h4 class="text-primary mb-4">What if your child’s greatest strength isn’t just talent — but character?
-                     Is your child ready to face life with courage, empathy, and confidence?
-                     Are your kids growing up smart... but not always strong in values?<br>No worries — Star Magnet is here to guide the way--</h4>
-                <p class="mb-4">Star Magnet is a transformative life coaching program crafted specifically for
-                    children, with a strong focus on character development. Designed and
-                    conducted by the passionate and experienced team at Step Up Foundation, the
-                    program aims to nurture the inner strengths of young minds and empower
-                    them to become confident, responsible, and compassionate individuals.
-                    At the heart of Star Magnet lies a holistic approach to personal growth. The
-                    program integrates engaging activities, practical life lessons, and guided
-                    reflections to help children cultivate core values such as honesty, empathy,
-                    resilience, respect, and self-discipline. Recognizing that character shapes
-                    destiny, the curriculum is built to inspire lasting change from within.
-                    The Step Up Foundation’s team—comprising skilled educators, child
-                    psychologists, and certified life coaches—brings years of experience and deep
-                    commitment to every session. Their hands-on and empathetic approach
-                    ensures each child is seen, heard, and supported throughout the journey.
-                    Through interactive workshops, real-life role play, goal-setting exercises, and
-                    consistent mentorship</p>
-                <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
-            </div>
+   <div class="container-fluid bg-secondary p-0">
+    <div class="row g-0">
+        <div class="col-lg-6 py-6 px-5">
+            <h1 class="display-5 mb-4">Welcome To <span class="m-0 text-uppercase gradient-text">STAR MAGNET</span></h1>
+            <h4 class="text-primary mb-4">
+                What if your child’s greatest strength isn’t just talent — but character?
+                Is your child ready to face life with courage, empathy, and confidence?
+                Are your kids growing up smart... but not always strong in values?<br>
+                No worries — Star Magnet is here to guide the way.
+            </h4>
+
+            <p class="mb-4">
+                <strong>Star Magnet</strong> is a transformative life coaching program crafted specifically for children, with a strong focus on character development.
+            </p>
+
+            <p class="mb-4">
+                Designed and conducted by the passionate and experienced team at <strong>Step Up Foundation</strong>, the program aims to nurture the inner strengths of young minds and empower them to become confident, responsible, and compassionate individuals.
+            </p>
+
+            <p class="mb-4">
+                At the heart of Star Magnet lies a holistic approach to personal growth. The program integrates engaging activities, practical life lessons, and guided reflections to help children cultivate core values such as honesty, empathy, resilience, respect, and self-discipline.
+            </p>
+
+            <p class="mb-4">
+                Recognizing that character shapes destiny, the curriculum is built to inspire lasting change from within.
+            </p>
+
+            <p class="mb-4">
+                The Step Up Foundation’s team — comprising skilled educators, child psychologists, and certified life coaches — brings years of experience and deep commitment to every session. Their hands-on and empathetic approach ensures each child is seen, heard, and supported throughout the journey.
+            </p>
+
+            <p class="mb-4">
+                Through interactive workshops, real-life role play, goal-setting exercises, and consistent mentorship, children embark on a path of true personal transformation.
+            </p>
+
+            <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
+        </div>
+
+        
+
             <div class="col-lg-6">
   <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5 text-white">
 
@@ -198,6 +212,30 @@
             </div>
         </div>
     </div>
+
+
+<!-- Counter Section Start -->
+<div class="row mt-5">
+    <!-- Satisfied Parents -->
+    <div class="col-md-6 mb-4">
+        <div class="p-4 rounded shadow text-center text-white" style="background: linear-gradient(90deg, #e6f0ff, #f2f7ff, #fafcff);">
+            <h2 class="display-5 fw-bold mb-2 d-inline" data-number="1000">0</h2>
+            <span style="font-size: 2.5rem; font-weight: 900; vertical-align: top; margin-left: 5px;">+</span>
+            <p class="mb-0 text-uppercase fw-semibold">Satisfied Parents</p>
+        </div>
+    </div>
+    <!-- Transformed Students -->
+    <div class="col-md-6 mb-4">
+        <div class="p-4 rounded shadow text-center text-white" style="background: linear-gradient(90deg, #e6f0ff, #f2f7ff, #fafcff);">
+            <h2 class="display-5 fw-bold mb-2 d-inline" data-number="1000">0</h2>
+            <span style="font-size: 2.5rem; font-weight: 900; vertical-align: top; margin-left: 5px;">+</span>
+            <p class="mb-0 text-uppercase fw-semibold">Transformed Students</p>
+        </div>
+    </div>
+</div>
+<!-- Counter Section End -->
+
+
     <!-- About End -->
 
 
@@ -224,8 +262,7 @@
 <!-- Team End -->
 
 <!-- Footer Start -->
- <!-- Footer Start -->
-     <div class="container-fluid bg-primary text-secondary p-5">
+  <div class="container-fluid bg-primary text-secondary p-5">
         <div class="row g-5">
             <div class="col-12 text-center">
                 <h1 class="display-5 mb-4">Stay Update!!!</h1>
@@ -240,6 +277,16 @@
     </div>
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
+            <!-- <div class="col-lg-3 col-md-6">
+                <h3 class="end-white-text mb-4">Quick Links</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
+                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
+                </div>
+            </div> -->
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
@@ -251,19 +298,26 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Get In Touch</h3>
-               <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
-                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
-                 <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
+                <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+918129543197" class="end-white-arrow">+91 812 954 3197</a></p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+919074717219" class="end-white-arrow">+91 907 471 7219</a></p>
+
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Follow Us</h3>
-                <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram fw-normal"></i></a>
-                </div>
-            </div>
+           <div class="col-lg-3 col-md-6">
+    <h3 class="end-white-text mb-4">Follow Us</h3>
+    <div class="d-flex">
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.instagram.com/starmagnetofficial?igsh=MWw4NG9zZ2dvenZ0dQ%3D%3D" target="_blank">
+            <i class="fab fa-instagram fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.facebook.com/StarMagnetOfficial?rdid=9iM4TjM2xFfksJee&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BgV7Zy5fY%2F" target="_blank">
+            <i class="fab fa-facebook-f fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="https://wa.me/918129543197" target="_blank">
+            <i class="fab fa-whatsapp fw-normal"></i>
+        </a>
+    </div>
+</div>
+
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
@@ -283,6 +337,29 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+   <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const counters = document.querySelectorAll('[data-number]');
+    counters.forEach(counter => {
+      const updateCount = () => {
+        const target = +counter.getAttribute('data-number');
+        const current = +counter.innerText;
+        const increment = target / 100;
+
+        if (current < target) {
+          counter.innerText = Math.ceil(current + increment);
+          setTimeout(updateCount, 20);
+        } else {
+          counter.innerText = target;
+        }
+      };
+      updateCount();
+    });
+  });
+</script>
+
+
 </body>
 
 </html>
