--- a/service.html
+++ b/service.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="Student Empowerment, Life Transformation, Personal Development, Emotional Intelligence, Study Skills, Kerala Education Programs, Student Life Coach, Children Motivation, Star Magnet Program">
 <meta name="description" content="Star Magnet is a life transformation program empowering students with daily motivation, emotional intelligence, study skills, and personal growth sessions in Malayalam and English.">
 
-
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -324,6 +323,16 @@
     </div>
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
+            <!-- <div class="col-lg-3 col-md-6">
+                <h3 class="end-white-text mb-4">Quick Links</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
+                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
+                </div>
+            </div> -->
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
@@ -335,19 +344,26 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Get In Touch</h3>
-               <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
-                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
-                 <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
+                <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+918129543197" class="end-white-arrow">+91 812 954 3197</a></p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+919074717219" class="end-white-arrow">+91 907 471 7219</a></p>
+
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Follow Us</h3>
-                <div class="d-flex">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram fw-normal"></i></a>
-                </div>
-            </div>
+           <div class="col-lg-3 col-md-6">
+    <h3 class="end-white-text mb-4">Follow Us</h3>
+    <div class="d-flex">
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.instagram.com/starmagnetofficial?igsh=MWw4NG9zZ2dvenZ0dQ%3D%3D" target="_blank">
+            <i class="fab fa-instagram fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.facebook.com/StarMagnetOfficial?rdid=9iM4TjM2xFfksJee&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BgV7Zy5fY%2F" target="_blank">
+            <i class="fab fa-facebook-f fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="https://wa.me/918129543197" target="_blank">
+            <i class="fab fa-whatsapp fw-normal"></i>
+        </a>
+    </div>
+</div>
+
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
